fix(bottomMenu): bottom menu being hidden by taskbar

--- a/src/components/Account/AccountBottomMenu/BottomMenu.module.css
+++ b/src/components/Account/AccountBottomMenu/BottomMenu.module.css
@@ -1,8 +1,7 @@
 .bottomMenuContainer {
   position: relative;
   width: 100%;
-  height: 5vh;
-  border: 1px solid red;
+  height: 1vh;
 }
 
 .bottomMenu {
